# crawlerWhipAI

./: .gitignore  API_REFERENCE.md  FEATURES.md  GETTING_STARTED.md  LICENSE  PERFORMANCE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  quick_start.sh
.github/workflows/: test-and-publish.yml
crawlerWhipAI/: __init__.py  version.py
crawlerWhipAI/browser/: __init__.py  binary_download.py  cloudflare.py  manager.py  nodriver_fallback.py  stealth.py
crawlerWhipAI/cache/: __init__.py  diffing.py  storage.py
crawlerWhipAI/content/: __init__.py  filter.py  markdown.py  scraper.py
crawlerWhipAI/core/: __init__.py  config.py  crawler.py
crawlerWhipAI/discovery/: __init__.py  filters.py  lightweight_mapper.py  link_mapper.py  robots.py  sitemap.py
crawlerWhipAI/dispatch/: __init__.py  dispatcher.py  monitor.py  rate_limiter.py
crawlerWhipAI/export/: __init__.py  formats.py  pipeline.py
crawlerWhipAI/models/: __init__.py  links.py  results.py
crawlerWhipAI/prompts/: __init__.py  templates.py
crawlerWhipAI/utils/: __init__.py  async_utils.py  browser.py  url.py
examples/: basic_crawl.py  caching_and_change_detection.py  export_content.py  fast_crawling.py  link_hierarchy.py
test_output/: crawl_results.json
test_output/markdown/: httpbin.org.md  httpbin.org_forms_post.md
tests/: conftest.py
tests/integration/: test_full_workflow.py
tests/unit/: test_models.py
