[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerWhipAI"
version = "0.2.2"
description = "A modern, async web crawler inspired by Crawl4AI with enhanced features for content archiving, SPA crawling, and intelligent caching"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "DataTamer.ai", email = "info@datatamer.ai"}
]
keywords = [
    "web-crawling",
    "web-scraping",
    "markdown",
    "llm",
    "async",
    "playwright",
    "content-extraction"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    # Core async/HTTP
    "aiohttp>=3.11.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",

    # Browser automation
    "playwright>=1.49.0",
    "patchright>=1.49.0",

    # HTML/XML parsing
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.0",
    "cssselect>=1.2.0",

    # Data validation & serialization
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",

    # NLP & content processing
    "nltk>=3.9.1",
    "rank-bm25>=0.2.2",
    "snowballstemmer>=2.2.0",

    # Data processing
    "numpy>=1.26.0,<3",
    "Pillow>=10.4.0",

    # LLM integration
    "litellm>=1.53.0",

    # Utilities
    "click>=8.1.7",
    "rich>=13.9.4",
    "python-dotenv>=1.0.0",
    "fake-useragent>=2.0.3",
    "psutil>=6.1.1",
    "pyOpenSSL>=25.3.0",
    "chardet>=5.2.0",
    "brotli>=1.1.0",
    "humanize>=4.10.0",
    "xxhash>=3.4.0",

    # Change detection & diffing
    "deepdiff>=8.0.0",

    # Geometry (for alpha shapes)
    "alphashape>=1.3.1",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
db = [
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
]
parquet = ["pyarrow>=15.0.0"]
mongodb = ["pymongo>=4.7.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-aiofiles",
]

[project.urls]
Homepage = "https://datatamer.ai"
Documentation = "https://datatamer.ai/docs/crawlerwhipai"
Repository = "https://github.com/data-tamer/crawlerWhipAI"
Issues = "https://github.com/data-tamer/crawlerWhipAI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crawlerWhipAI*"]

[tool.setuptools.package-data]
crawlerWhipAI = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "W", "F", "I", "N", "UP", "RUF", "C4", "B", "A"
]
ignore = ["E501", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=crawlerWhipAI --cov-report=term-missing --cov-report=html"
